Lobby & Session Join

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -217,3 +217,7 @@ ConnectionType=USBOnly
 bUseManualIPAddress=False
 ManualIPAddress=
 
+[/Script/EngineSettings.GameMapsSettings]
+GameDefaultMap=/Game/Test/Levels/LVL_Lobby.LVL_Lobby
+EditorStartupMap=/Game/Test/Levels/LVL_Lobby.LVL_Lobby
+
